# btc_descriptor

./: .gitignore  CMakeLists.txt  Makefile  pyproject.toml  setup.py
btcdesc/: __init__.py  pipeline.py
btcdesc/config/: __init__.py  parser.py
btcdesc/datasets/: __init__.py  apollo.py  digiforest.py  helipr.py  mulran.py  ncd.py  nclt.py
btcdesc/tools/: cmd.py  parse_g2o.py  pipeline_results.py  progress_bar.py
cpp/: CMakeLists.txt  btc.cpp  btc.h
pybind/: CMakeLists.txt  btcdesc.py  btcdesc_pybind.cpp
src/: btc.cpp
